--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,14 +30,17 @@ requirements:
     - pandas
     - pyarrow
     - pytables
+    - python-blosc2  # needed by pytables
 
 test:
   imports:
     - GCRCatalogs
   commands:
     - pip check
+    - pytest --no-catalog
   requires:
     - pip
+    - pytest
 
 about:
   home: https://github.com/LSSTDESC/gcr-catalogs
